feat: 完善安卓开发文档，增加Shadow框架的详细解析和使用指南

--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -4704,11 +4704,59 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
 
 ### Shadow 解析
 
-腾讯开源的一个 Android 插件化框架.
+Shadow 是腾讯开源的 Android 插件化框架.
 
-#### 设计理念
+#### 框架结构及设计理念
 
-插件和宿主是多进程的.
+插件代码加载:
+- 使用自定义的 DexClassLoader 加载插件 APK 中的普通类. 只有在加载 Activity 容器时, 通过反射插入 DexClassLoader 到宿主的 PathClassLoader 前面, 实现 BootClassLoader <- DexClassLoader <- PathClassLoader 逻辑, 使得系统在向 PathClassLoader 查找 ContainerActivity 时能够正确找到实现.
+- 插件框架的代码本身也是插件的一部分, 可以随插件一起更新, 避免了宿主代码更新困难的问题.
+- 通过ClassLoader的隔离机制确保插件之间的代码不会相互干扰
+
+系统组件注册:
+- 宿主预注册壳子代理组件: 在宿主的 AndroidManifest.xml 中预先注册一系列壳子代理组件(Activity、Service等).
+- 框架内部维护插件组件与宿主壳子代理组件的映射关系, 当插件想要启动组件时, Shadow 会将插件组件 Intent 转换为对应的宿主壳子代理组件 Intent, 从而实现对系统服务的调用.
+- 委托机制: 使用 HostActivityDelegate 和 ShadowActivityDelegate 等委托类, 实现壳子代理组件与插件组件之间的方法调用转发.
+
+资源加载:
+- 双方案适配：根据Android系统版本采用不同的资源加载策略:
+    - 在API 26及以下版本：使用 MixResources 方案, 将宿主资源和插件资源混合在一起, 先尝试从插件 Resources 获取，失败则从宿主 Resources 获取
+    - 在API 27及以上版本：通过 ApplicationInfo.sharedLibraryFiles 将插件 APK 添加到 Resources 对象中. 插件和宿主之间资源互相访问还是需要接口层来实现.
+- 资源ID冲突解决: 通过资源 ID 分区, 确保插件和宿主的资源ID不会冲突. 宿主使用 0x7f 分区, 插件使用0x80或更大的分区.
+- WebView 资源处理: 
+    - 因为 WebView 在初始化时会向系统构造的 Resources 对象注入 webview.apk, 以便 WebView 可以使用自己的资源. 但它不会向插件构造的 Resources 对象自动注入这些资源.
+    - Shadow 框架会在在创建插件 Resources 时, 尝试创建 Webview 触发对应的初始化流程, 然后通过复制宿主的 sharedLibraryFiles, 将包含 webview.apk 的资源路径传递给插件 Resources.
+
+插件和宿主，以及插件和插件之间的通信:
+- 直接或接口调用: 插件可以直接使用宿主中的类和方法, 但是要求宿主将需要暴露给插件的接口打包成独立的共享库, 供插件使用.
+- 广播通信: 通过 Android 的广播机制实现宿主和插件之间的通信
+- ContentProvider通信: Shadow 预注册了 PluginContainerContentProvider, 用于跨进程通信.
+
+插件管理机制(补充):
+- 插件包结构约定: 
+    - zip 包格式, 包含插件管理器 APK, 插件运行时环境处理插件 APK, 业务插件加载插件 APK, 业务插件 APK 和相关配置文件. 所有插件都是可更新的, 更新时只需要更新插件 zip 包. 
+    - 配置文件会通过 gradle 插件自动生成, 包含当前插件包的
+        - version: 插件包的版本号, 用于版本控制和更新.
+        - compact_version: 插件包的兼容版本号, 用于旧 App 加载新插件包的兼容性支持.
+        - UUID: 插件包的唯一标识符, 用于标识插件包的唯一性, 升级时必须更改.
+        - UUID_NickName: 插件包的版本昵称, 用于辅助识别插件版本 (如"v1.0.3-beta").
+        - pluginLoader: 处理业务插件加载的插件的插件信息 (包括路径和 hash), 主要负责加载插件类.
+        - runtime: 处理业务插件运行时环境处理的插件的插件信息, 用于支持插件的生命周期管理等运行时操作.
+        - plugins: 插件包内的所有业务插件信息的列表.
+- 业务插件约定:
+    - 所有业务插件在某个插件的 build.gradle 文件中声明注册, 最终经由 gradle 插件自动识别对应的插件构建任务, 将插件及其插件信息自动打包到插件包中.
+    - 每个插件有固定的结构约定:
+        - `businessName`: 插件所代表的业务模块名称, 通常用于业务层标识.
+        - `partKey`: 插件的唯一标识符, 用于标识插件的唯一性.
+        - `hostWhiteList`: 表示此插件可访问的宿主内部的包名白名单, 非白名单的包名内部的类和方法将无法被插件访问.
+        - `dependsOn`: 表示插件所依赖的其他插件模块, 如业务插件通常依赖基础模块.
+        - `buildTask`: 插件的构建任务名称, 编译时自动打包当前插件的 apk 包时使用. 不注入插件配置信息.
+        - `apkPath`: `buildTask` 任务执行后, 插件 APK 的生成路径, 用于编译后打包插件到插件包中. 不注入插件配置信息.
+        - `hash`: 插件 apk 文件的哈希值, 用于校验插件的完整性和一致性. 自动生成, 不需要手动设置.
+
+> [!info]
+> 壳子代理: 用于代替插件内真正的页面、服务、广播接收器等组件的空壳占位类. 系统启动插件的对应组件时, 先访问壳子代理组件, 然后通过 runtime 访问插件内的真正组件.
+
 
 #### 使用介绍
 
@@ -4719,8 +4767,6 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
 - 插件加载器应用(plugin->loader, 多个, 必须): 负责加载插件, 定义插件组件和壳子代理组件的配对关系.
 - 插件运行时应用(plugin->runtime, 待定, 必须): 负责插件的运行时逻辑, 定义壳子代理组件(Activity/Service/BroadcastReceiver的占位组件)的实际类.
 - 插件业务应用(plugin->business_plugin, 多个, 必须): 可以安装的业务插件.
-
-> 壳子代理: 用于代替插件内真正的页面、服务、广播接收器等组件的空壳占位类. 系统启动插件的对应组件时, 先访问壳子代理组件, 然后通过 runtime 访问插件内的真正组件.
 
 一般的项目结构
 
@@ -4739,13 +4785,33 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
 │   │   ├── business_plugin // 业务插件, 基于 business_lib, 仅包含业务代码和插件框架代码, 不能直接打包和运行的业务插件
 ```
 
+##### 新建项目
+
+1. 复制 sdk 内的源项目文件到新项目中. 目标示例: ../Projects/ShadowApplication/sdk/shadow
+
+
 ##### 宿主(host)编写流程
 
 1. 依赖配置
 
-    在 build.gradle 中添加以下依赖:
+    在 build.gradle 中添加以下依赖和配置:
 
     ```gradle
+   android {
+        // 配置资源目录, 用于构建过程中把自动生成的插件管理器 APK 和插件 ZIP 包 添加到宿主 App 的 assets 资源目录
+        sourceSets {
+            debug {
+                // Debug版本的资源目录
+                assets.srcDir('build/generated/assets/sample-manager/debug/')
+                assets.srcDir('build/generated/assets/plugin-zip/debug/')
+            }
+            release {
+                // Release版本的资源目录
+                assets.srcDir('build/generated/assets/sample-manager/release/')
+                assets.srcDir('build/generated/assets/plugin-zip/release/')
+            }
+        }
+   }
     dependencies {
         implementation 'com.tencent.shadow.core:common'
         implementation 'com.tencent.shadow.dynamic:dynamic-host'
@@ -4754,24 +4820,24 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
 
 2. `AndroidManifest.xml` 配置
 
-    - 自定义和注册 `PluginProcessService` 类型的插件进程服务, 用于管理插件加载过程, 每个插件进程都需要注册一个.
-    - 自定义和注册 `PluginLoadActivity`, 用于承接插件加载逻辑.
-    - 自定义和注册 `PluginXProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式.
+    - 自定义和注册 `PluginLoadActivityXxx`, 用于承接插件加载逻辑.
+    - 自定义和注册 `PluginProcessServiceXxx` 类型的插件进程服务, 用于管理插件加载过程, 每个插件进程都需要注册一个.
+    - 自定义和注册 `PluginXxxProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式.
     - 自定义和注册 `MainProcessManagerReceiver` 接收器, 用于接收插件进程加载相关的的广播消息.
     - 注册 `PluginContainerContentProvider` 用于跨进程通信.
 
     ```xml
-    <service
-        android:name=".PluginXProcessPPS"
-        android:process=":plugin" />
-
     <activity
-        android:name=".PluginLoadActivity"
+        android:name=".PluginLoadActivityXxx"
         android:launchMode="standard"
         android:screenOrientation="portrait" />
 
+    <service
+        android:name=".PluginProcessServiceXxx"
+        android:process=":plugin" />
+
     <activity
-        android:name="com.tencent.shadow.sample.plugin.runtime.PluginDefaultProxyActivity"
+        android:name="com.tencent.shadow.sample.plugin.runtime.PluginXxxProxyActivity"
         android:launchMode="standard"
         android:screenOrientation="portrait"
         android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|screenLayout|fontScale|uiMode|orientation|screenSize|smallestScreenSize|layoutDirection"
@@ -4794,7 +4860,7 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
 
 3. `Application` 实现
 
-    - 注意宿主进程和插件进程共用 `Application` 类, 因此初始化代码需要区分宿主和插件进程.
+    - 注意宿主进程和插件进程共用 `Application` 类, 即在宿主和插件的进程中都存在 `Application` 类, 因此初始化代码需要区分宿主和插件进程.
     - `onCreate`:
         - 如果是插件进程, 则恢复上次加载的插件进程的 runtime 信息, 主要是重新调整 classloader.
             - SDK: `DynamicRuntime.recoveryRuntime(this);`
@@ -4808,21 +4874,392 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
             - 自定义 `PluginManagerUpdater` 管理插件文件的更新逻辑.
             - 通过 SDK 的 `DynamicPluginManager` 自动管理插件管理器的更新, 安装和卸载.
 
-4. 启动插件: 基于 `PluginLoadActivity` 发起加载插件的请求(Intent), 通过 Extras 传递插件相关参数.
+4. 插件管理器更新器 `PluginManagerUpdater` 的自定义实现, 官方 demo 不支持更新, 直接使用的固定路径的 apk.
 
-    - `KEY_PLUGIN_ZIP_PATH`: 插件的 zip 包路径, 本地文件路径.
+    ```kotlin
+    class PluginManagerUpdaterImpl : PluginManagerUpdater {
+        override fun wasUpdating():  Boolean {
+            // 检查插件管理器是否正在更新
+       }
+   
+        override suspend fun update(): File? {
+            // 异步更新插件管理器的 apk 文件
+       }
+   
+       override fun getLatest(): File? {
+            // 获取当前缓存的最新的插件管理器的 apk 文件
+        }
+   
+       override suspend fun isAvailable(file: File): Boolean {
+             // 检查 apk 文件是否可用
+       }
+   }
+    ```
+
+    完整的插件管理器升级器一般需要实现以下功能:
+
+    - 服务器端更新支持 - 从远程服务器检查和下载更新
+    - 断点续传 - 网络中断后可从断点继续下载
+    - 文件完整性校验 - MD5 哈希验证确保文件完整性
+    - 版本管理 - 智能版本比较和管理
+    - 状态持久化 - 更新状态在应用重启后保持
+    - 进度回调 - 详细的更新进度和状态回调
+    - 线程安全 - 并发控制确保更新过程安全
+    - 错误处理 - 完善的异常处理和重试机制
+    - 本地更新支持 - 从本地文件检查更新
+    - 支持补丁升级 - 插件升级时可以使用补丁包进行增量更新
+
+5. 启动插件: 基于 `PluginLoadActivityXxx` 发起加载插件的请求(Intent), 通过 Extras 传递插件相关参数.
+
     - `KEY_ACTIVITY_CLASSNAME`: 插件内的 Activity 类名, 必须是完整的类名, 如 `com.tencent.shadow.sample.plugin.business.MainActivity`.
-    - `KEY_EXTRAS`: 插件加载时需要给对应目标地的额外参数, Bundle 对象.
-    - `KEY_PLUGIN_PART_KEY`: 插件分区标识, 用于区分相同插件包内的不同插件部分.
+    - `KEY_PLUGIN_PART_KEY`: 插件分区标识, 用于区分一个插件包内的不同插件 apk.
+    - `KEY_FROM_ID`: 启动插件的目标类型 ID, 如 `FROM_ID_NOOP`, `FROM_ID_START_ACTIVITY`, `FROM_ID_CLOSE`, `FROM_ID_LOAD_VIEW_TO_HOST`
+    - `KEY_EXTRAS`: 执行目标操作时需要给对应目标的额外参数, Bundle 对象, 例如打开 Activity 时需要传递的额外启动参数.
 
-5. 插件加载的入口 `PluginLoadActivity` 实现
+    > [!question]
+    > 
+    > 为什么不在这里传递 `KEY_PLUGIN_ZIP_PATH`, 而是在 `PluginLoadActivityXxx` 直接写死的插件 zip 包路径, 不推荐使用多个插件 zip 包吗?
+    > 
+    > 
 
+6. 插件加载的入口 `PluginLoadActivityXxx` 实现
+
+    - 通常含有一个用于显示插件加载 view 的容器
     - 在 `onCreate` 中获取 Intent 中的插件相关参数, 如插件 zip 包路径, Activity 类名等.
-    - 调用 `PluginProcessService` 的 `startPluginProcess` 方法, 启动插件进程并加载插件.
+    - 通过协程或者线程执行插件加载
+        - 通过 `Application` 访问唯一插件管理器
+        - 基于启动 `PluginLoadActivityXxx` 时传递的 intent 以及写死的插件 zip 包路径 `KEY_PLUGIN_ZIP_PATH`, 构造插件加载参数, 并通过插件管理器执行与 `KEY_FROM_ID` 对应的操作.
+            - `FROM_ID_NOOP`: 空操作
+            - `FROM_ID_START_ACTIVITY`: 启动插件内部的 Activity
+            - `FROM_ID_CLOSE`: 关闭插件进程
+            - `FROM_ID_LOAD_VIEW_TO_HOST`: 加载插件 view 到宿主
+            - 等...
+    - 插件加载完成后, 触发 finish, 在 `onDestroy` 中释放当前插件管理器的资源和加载视图资源.
 
-插件管理器(manager)编写流程
+##### 插件管理器(manager)编写流程
 
-- 依赖 `com.tencent.shadow.core:common` 和 `com.tencent.shadow.dynamic:dynamic-manager`
+在 Shadow 插件框架中, 插件管理器的实例由宿主应用的 `Application` 类提供访问入口, 具体类型为 `DynamicPluginManager`. 该对象是插件系统的核心组成部分, 负责在运行时动态加载和管理插件, 并支持插件管理器自身的热更新与替换逻辑.
+
+首先, 其动态更新能力依赖于宿主中开发者自定义的 `PluginManagerUpdater` 实现类, 在需要时可以实现替换或升级插件管理器. 而其运行时插件加载与管理能力, 则由开发者实现的 `ManagerFactoryImpl` 和自定义的 `XxxPluginManagerThatUseDynamicLoader` 实现类来完成.
+
+`DynamicPluginManager` 会自动通过反射加载 `ManagerFactoryImpl` 类, 并调用其 `buildManager` 方法来创建具体的插件管理器实例 `XxxPluginManagerThatUseDynamicLoader`. 
+
+1. 依赖配置
+
+   在 build.gradle 中添加以下依赖:
+
+    ```gradle
+    dependencies {
+        implementation 'com.tencent.shadow.dynamic:dynamic-manager'
+        implementation 'com.tencent.shadow.core:manager'
+        implementation 'com.tencent.shadow.dynamic:dynamic-loader'
+        
+        compileOnly 'com.tencent.shadow.core:common'
+        compileOnly 'com.tencent.shadow.dynamic:dynamic-host'
+    }
+    ```
+
+2. 实现 sdk 内部所需的插件管理器工厂实现类 `ManagerFactoryImpl` 和可选的插件框架类加载白名单.
+
+    > [!tip]
+    >
+    > `ManagerFactoryImpl` 的包名, 类名, 方法, 继承关系必须固定
+
+    ```kotlin
+    package com.tencent.shadow.dynamic.impl
+    
+    import android.content.Context
+    import com.tencent.shadow.dynamic.host.ManagerFactory
+    import com.tencent.shadow.dynamic.host.PluginManagerImpl
+    
+    class ManagerFactoryImpl : ManagerFactory {
+        override fun buildManager(context: Context): PluginManagerImpl {
+            return 这里填写具体的自定义实现类
+        }
+    }
+
+    interface WhiteList {
+        companion object {
+            val sWhiteList = arrayOf(
+                "com.tencent.host.shadow",
+                "com.tencent.shadow.test.lib.constant"
+            )
+        }
+    }
+    ```
+
+   - 插件管理器工厂类会在使用 SDK 的 `DynamicPluginManager` 时, 自动从配置的插件管理器 APK 文件中通过反射加载.
+   - 插件框架类加载白名单会在 SDK 加载 apk 文件时自动加载和绑定到对应的插件类加载器中.
+
+3. 自定义插件管理器实现类(一般分两部分实现(可以合并为一部分), `FastPluginManager` 只负责插件安装和加载, `XxxPluginManager` 负责根据插件管理器负责的业务行为或场景提供插件管理器所需的业务逻辑)
+
+   插件管理器的业务行为主要由 `getName()` 方法和 `enter()` 方法控制. `getName()` 方法用于对不同插件管理器的持久化存储路径进行区分; `enter()` 方法控制当前插件管理器所支持的插件操作, 如启动插件 Activity, 关闭插件等操作.
+
+    ```kotlin
+    class XxxPluginManager(
+        private val appContext: Context
+    ) : FastPluginManager(appContext) {
+        override fun getName(): String = "test-dynamic-manager"
+    
+        override fun enter(context: Context, fromId: Long, bundle: Bundle, callback: EnterCallback?) {
+            when (val action = PluginAction.fromId(fromId)) {
+                is PluginAction.NoOp -> {}
+                is PluginAction.StartActivity -> {}
+                is PluginAction.Close -> {}
+            }
+        }
+    }
+    ```
+   
+    启动插件 Activity 的逻辑:
+    - 执行 callback 的展示加载 view 逻辑
+    - 安装 `KEY_PLUGIN_ZIP_PATH` 参数指定的插件 zip 包
+    - 加载 `KEY_PLUGIN_PART_KEY` 参数指定的插件
+    - 手动调用插件 `Application` 的 `onCreate` 方法
+    - 转换和构造能启动目标 Activity 的 Intent, 然后通过内部绑定的插件加载服务接口 `mPluginLoader` 在插件中打开目标 Activity.
+    - 执行 callback 的隐藏加载 view 逻辑
+
+    关闭插件进程的逻辑:
+    - 直接调用 `close()`  方法, 触发内部 SQLite 数据库的关闭.
+
+    安装插件的逻辑(处理插件包解析, 插件信息持久化):
+    - 从 `KEY_PLUGIN_ZIP_PATH` 提供的 zip 包中解析插件配置信息, 解析通过调用 SDK 内部方法 `installPluginFromZip`
+    - 将所有插件 apk 内部的 so 库文件提取到宿主管理的目录下, 或是直接注册 so 库信息到框架内部, 运行时加载. 是否提取取决于插件内 `AndroidManifest.xml` 中的 `extractNativeLibs` 属性, 提取方法直接调用 `extractSo` 即可.
+    - 调用 `onInstallCompleted` 方法, 通知框架所有插件安装完成, 并将插件信息持久化存储到 SQLite 数据库中, 所有信息共同存储在 InstalledPlugin 实例中.
+    - 返回已安装的插件包信息, 类型为 `InstalledPlugin`.
+
+    加载插件的逻辑:
+        - 通过 `KEY_PLUGIN_PART_KEY` 提供的插件分区标识 `partKey` 绑定此插件对应的插件进程服务类 `XxxPluginProcessService`.
+        - 优先加载插件运行时环境处理的插件(runtime)和处理业务插件加载的(loader), 然后加载业务插件. 
+            - 前两者加载需要通过 `PluginProcessService` 的 `loadPluginLoader` 和 `loadRuntime` 函数
+            - 业务插件加载需要通过 `DynamicPluginLoader` 的 `loadPlugin` 函数.
+        
+   补充: 启动插件内部服务与宿主通信的方式(如在宿主中展示插件 view, 补充数据等操作):
+    - 直接构造启动对应 Service 的 Intent, 然后通过内部绑定的插件加载服务接口 `mPluginLoader` 在插件中打开目标 Service.
+    - 因为插件和宿主是跨进程隔离的, 因此两者之间需要交互的数据需要通过同时依赖的 host-lib 进行相关数据的静态全局管理.
+
+##### 插件编写流程
+
+在 Shadow 插件框架中, 插件必须包含两个特殊插件: 负责业务插件运行环境处理的插件(runtime)和负责业务插件加载的插件(loader). runtime 负责插件的运行时逻辑, 包括插件的生命周期管理, 插件组件的注册和调用等. loader 负责加载插件, 包括插件的安装, 卸载, 更新等操作.
+
+
+在 Shadow 插件框架中, 插件管理器的实例由宿主应用的 `Application` 类提供访问入口, 具体类型为 `DynamicPluginManager`. 该对象是插件系统的核心组成部分, 负责在运行时动态加载和管理插件, 并支持插件管理器自身的热更新与替换逻辑.
+
+首先, 其动态更新能力依赖于宿主中开发者自定义的 `PluginManagerUpdater` 实现类, 在需要时可以实现替换或升级插件管理器. 而其运行时插件加载与管理能力, 则由开发者实现的 `ManagerFactoryImpl` 和自定义的 `XxxPluginManagerThatUseDynamicLoader` 实现类来完成.
+
+`DynamicPluginManager` 会自动通过反射加载 `ManagerFactoryImpl` 类, 并调用其 `buildManager` 方法来创建具体的插件管理器实例 `XxxPluginManagerThatUseDynamicLoader`.
+
+
+###### 业务插件加载器(loader)编写流程
+
+在 Shadow 插件框架中, 动态插件加载器 `DynamicPluginLoader` 是插件加载器的核心实现, 负责加载插件 APK 中的类和资源, 并提供插件组件的注册和调用功能. 插件加载器通常分为两部分实现: `XxxPluginLoader` 和 `XxxComponentManager`.
+
+`XxxPluginLoader` 扩展自 `ShadowPluginLoader`, 只负责实际的插件加载过程，包括资源、类加载等核心功能. `XxxComponentManager` 负责管理插件中的四大组件和映射关系, 如 Activity、Service、BroadcastReceiver 和 ContentProvider.
+
+`DynamicPluginLoader` 会自动通过反射加载 `CoreLoaderFactoryImpl` 类, 并调用其 `build` 方法来创建具体的插件加载器实例 `XxxPluginLoader`. 而 `XxxComponentManager` 则需要在 `XxxPluginLoader` 中创建和注册.
+
+1. 依赖配置
+   
+    在 build.gradle 中添加以下依赖和配置:
+    ```gradle
+    android {
+        defaultConfig {
+            // loader 插件是插件框架所必需的插件, 同时也不需要构建出可独立运行 APK
+            // 而宿主加载插件时要求插件的 applicationId 和宿主的 applicationId 相同, 因此这里需要设置为 applicationId
+            applicationId project.HOST_APP_APPLICATION_ID
+        }
+    }
+    dependencies {
+        implementation 'com.tencent.shadow.core:loader'
+        implementation 'com.tencent.shadow.dynamic:dynamic-loader'
+        implementation 'com.tencent.shadow.dynamic:dynamic-loader-impl'
+   
+        compileOnly 'com.tencent.shadow.core:runtime'
+        compileOnly 'com.tencent.shadow.core:activity-container'
+        compileOnly 'com.tencent.shadow.core:common'
+        compileOnly 'com.tencent.shadow.dynamic:dynamic-host'
+    }
+    ```
+
+2. 实现 sdk 内部所需的核心加载器工厂实现类 `CoreLoaderFactoryImpl` 和可选的插件框架类加载白名单.
+   
+   > [!tip]
+   >
+   > `CoreLoaderFactoryImpl` 的包名, 类名, 方法, 继承关系必须固定. 框架内部会自动通过反射去创建和使用.
+   
+    ```kotlin
+    package com.tencent.shadow.dynamic.loader.impl
+    
+    import android.content.Context
+    import com.tencent.shadow.core.loader.ShadowPluginLoader
+    
+    class CoreLoaderFactoryImpl : CoreLoaderFactory {
+        override fun build(hostAppContext: Context): ShadowPluginLoader {
+            return 这里填写具体的自定义实现类
+        }
+    }
+
+    interface WhiteList {
+        companion object {
+            val sWhiteList = arrayOf(
+                "com.tencent.shadow.sample.host.lib",
+            )
+        }
+    }
+    ```
+
+3. 自定义插件加载器实现类(一般分两部分实现, `XxxPluginLoader` 只负责实际的业务插件的加载过程，包括资源、类加载等核心功能, `XxxComponentManager` 负责管理插件中的四大组件和壳子容器组件的映射关系)
+
+业务插件加载器 `XxxPluginLoader` 扩展自 `ShadowPluginLoader`, 其业务行为主要由 `getComponentManager` 和 `getDelegateProviderKey` 方法控制, 因此一般情况下只需要实现两个方法, 返回一个自定义的 `XxxComponentManager` 实例和专用与此加载器的唯一 KEY 即可. 如果需要自定义插件加载器的其他行为, 如插件加载回调, 插件加载失败处理等, 可以重写 `loadPlugin` 方法.
+
+业务插件组件管理类 `XxxComponentManager` 负责管理插件中的四大组件和宿主中注册的壳子容器组件的映射关系, 其业务行为主要由 `onBindContainerActivity` 方法 和 `onBindContainerContentProvider` 方法控制. 
+- `onBindContainerActivity` 方法用于将插件中的 Activity 组件与宿主中注册的壳子容器组件进行绑定, 并返回一个 `ComponentName` 实例, 绑定关系是通过类名实现.
+- `onBindContainerContentProvider` 方法用于将插件中的 ContentProvider 组件与宿主中注册的壳子容器组件进行绑定, 并返回一个 `ContainerProviderInfo` 实例.
+
+> [!question]
+> 为什么不根据插件内的 `Manifest` 文件中的 `activity` 元素的 `android:name` 属性来自动绑定组件, 而是通过类名实现?
+> 为什么壳子容器组件不是自动生成, 而是手动注册?
+
+###### 处理业务插件运行时环境的插件(runtime)编写流程
+
+在 Shadow 插件框架中, runtime 插件是插件运行时环境处理的插件, 负责插件的运行时逻辑, 包括插件的生命周期管理, 插件组件的注册和调用等. 处理的逻辑很复杂, 但是直接编写 runtime 插件应用很简单, 只需要实现以下几个步骤:
+
+1. 依赖配置
+   
+   在 build.gradle 中添加以下依赖和配置:
+    ```gradle
+    android {
+        defaultConfig {
+            // runtime 插件是插件框架所必需的插件, 同时也不需要构建出可独立运行 APK
+            // 而宿主加载插件时要求插件的 applicationId 和宿主的 applicationId 相同, 因此这里需要设置为 applicationId
+            applicationId project.HOST_APP_APPLICATION_ID
+        }
+    }
+    dependencies {
+        implementation 'com.tencent.shadow.core:activity-container'
+    }
+    ```
+
+2. 自定义各种运行时需要在宿主中使用的壳子组件, 如 `XxxProxyActivity`. 所有壳子 `Activity` 都需要继承自 `PluginContainerActivity`. 其中可选择实现 `getDelegateProviderKey` 方法, 返回一个唯一的 KEY, 用于标识此壳子组件对应的插件加载器. 如果不实现, 则默认使用 `PluginContainerActivity` 的 KEY.
+
+##### 业务插件编写流程
+
+在 Shadow 插件框架中, 业务插件是指实际的业务逻辑代码, 包括独立的业务组件和相关资源. 每个业务插件可以分为两部分实现: 业务插件库和业务插件应用. 如果需要业务插件能够直接打包和运行, 可以再额外添加一个依赖业务插件库的对应业务应用或是处理业务插件应用的打包逻辑.
+
+###### 业务插件库
+
+业务插件库是一个 library 模块, 主要用于存放当前业务插件所需的所有业务逻辑代码, 甚至是业务插件的入口 Activity 和 Application 类.
+
+这类库的编写没什么特殊的, 与普通的 Android library 模块编写类似.
+
+###### 业务插件应用
+
+业务插件应用是一个 application 模块, 主要用于打包当前业务插件所需的所有业务逻辑代码和资源, 并生成一个可安装的 APK 文件. 业务插件应用通常依赖于对应的业务插件库, 并在其基础上添加一些额外的配置和逻辑, 便于 Shadow 插件框架进行自动化处理.
+
+> [!warning]
+> 如果有多个业务插件, 某些配置只需要在一个业务插件应用中配置即可, 其他业务插件应用可以不配置, 对应的特殊配置在下面会提到.
+
+1. 依赖配置
+
+   在 build.gradle 中添加以下依赖和配置:
+    ```gradle
+    buildscript {
+        dependencies {
+            classpath 'com.tencent.shadow.core:runtime' // Shadow框架的核心运行时库
+            classpath 'com.tencent.shadow.core:activity-container' // Shadow框架的Activity容器
+            classpath 'com.tencent.shadow.core:gradle-plugin' // Shadow框架的Gradle插件
+            classpath "org.javassist:javassist:$javassist_version" // Java字节码操作库,用于代码注入
+        }
+    }
+
+    apply plugin: 'com.android.application'
+    apply plugin: 'com.tencent.shadow.plugin'
+    
+    android {
+        // 默认配置
+        defaultConfig {
+            // 业务插件一般可能需要直接打包成 APK, 因此需要设置业务对应 applicationId
+            // 但是宿主使用插件时要求插件的 applicationId 和宿主的 applicationId 相同
+            // 因此需要后面的 productFlavors 配置在插件打包时覆盖此值为宿主的 applicationId
+            applicationId 'com.tencent.shadow.sample.plugin.app' 
+        }
+
+        productFlavors {
+            plugin {
+                // 这里会自动将插件 applicationId 设置为和宿主相同
+                applicationId project.SAMPLE_HOST_APP_APPLICATION_ID
+            }
+        }
+
+        aaptOptions {
+            // 因为前面提到过低版本 Android 系统不支持插件的资源分区, 因此插件的 Resources 需要和宿主的 Resources 合并.
+            // 这里需要将插件的资源ID分区改为和宿主0x7F不同的值, 避免合并过程产生资源冲突.
+            additionalParameters "--package-id", "0x7E", "--allow-reserved-package-id"
+        }
+    }
+    
+    // 依赖配置
+    dependencies {
+        pluginCompileOnly 'com.tencent.shadow.core:runtime'
+   
+        pluginCompileOnly project(":sample-host-lib") // 插件类型打包时使用 compileOnly 类型依赖, 因为这个库的实现在宿主有了, 配置插件的访问白名单即可使用
+        normalImplementation project(":sample-host-lib") // 正常 apk 打包时使用 implementation 类型依赖, 是直接生成独立 apk 了, 与宿主无关
+    
+        implementation project(":sample-base-lib") // 这里表示插件类型打包或正常 apk 打包均使用 implementation 类型依赖
+    }
+    
+    // Shadow 插件框架的配置, 此配置只需要在业务插件应用中配置一次即可.
+    shadow {
+        // 插件打包配置
+        packagePlugin {
+            // 加载器和运行时APK的项目路径, 用于和下面的 loaderApkConfig 和 runtimeApkConfig 配置一起实现两个插件的自动打包和加载.
+            loaderApkProjectPath = 'projects/sample/source/sample-plugin/sample-loader'
+            runtimeApkProjectPath = 'projects/sample/source/sample-plugin/sample-runtime'
+   
+            // 配置不同构建类型的插件
+            pluginTypes {
+                // Debug版本配置
+                debug {
+                    loaderApkConfig = new Tuple2('sample-loader-debug.apk', ':sample-loader:assembleDebug')
+                    runtimeApkConfig = new Tuple2('sample-runtime-debug.apk', ':sample-runtime:assembleDebug')
+   
+                    // 业务插件因为自由度更高, 需要手动配置每个业务插件的 APK 信息.
+                    pluginApks {
+                        sampleApp {
+                            businessName = 'sample-plugin-app'
+                            partKey = 'sample-app'
+                            buildTask = ':sample-app:assemblePluginDebug'
+                            apkPath = 'projects/sample/source/sample-plugin/sample-app/build/outputs/apk/plugin/debug/sample-app-plugin-debug.apk'
+                            hostWhiteList = ["com.tencent.shadow.sample.host.lib"]
+                            dependsOn = ['sample-base'] // 运行时依赖的其他插件, 目前的笔记未涉及, 后面再介绍, 如果自己编写 demo, 这里可以暂时不用.
+                        }
+                    }
+                }
+    
+                // Release版本配置(结构同Debug, 路径不同)
+                ...
+            }
+    
+            // 插件包配置
+            archiveSuffix = System.getenv("PluginSuffix") ?: "" // 插件包后缀, 可以通过环境变量 PluginSuffix 来设置, 默认为空
+            archivePrefix = 'plugin' // 插件包前缀, 默认为 'plugin'
+            destinationDir = "${getRootProject().getBuildDir()}" // 插件包输出目录, 这里为整个项目的根 build 目录
+    
+            version = 4 // 插件包版本, 用于标识插件包的版本
+            uuidNickName = "1.1.5" // 插件包版本的别名, 用于标识当前插件包的版本
+            compactVersion = [1, 2, 3] // 当前版本插件包的兼容旧版本号 [1, 2, 3]
+        }
+    }
+    ```
+
+##### 打包流程
+
+1. Shadow 的 Gradle 插件会在定义 `plugin` 配置的业务插件应用中自动生成编译所有插件 apk 并打包成 zip 包的任务. 示例位置: Android Studio -> Gradle -> :sample-app -> Tasks -> shadow -> packageAllPlugin. 执行即可.
+2. 执行宿主的打包任务, 示例位置: Android Studio -> Gradle -> :sample-host -> Tasks -> build -> assembleDebug. 执行即可. 或是右上角常用的 app 构建图标也行, 选择宿主项目即可.
+
+#### 高级用法
+
+##### 如何在插件中使用宿主的资源
 
 #### 源码解析
 
@@ -4873,3 +5310,154 @@ manager在加载"插件"时，首先需要先加载"插件"中的runtime和loade
 
 - 宿主加载 Manager 插件
 - Manager 解析插件包.
+
+
+#### issues 临时笔记
+
+##### 插件升级问题
+
+---question & answer
+最近看源码的时候突然发现好像没有这部分说明/ 代码, 那么请问你们是如何在插件已经运行过一次后 对插件进行更新的呢,更新比较关键, 先卸载再更新只是一种途径
+...
+我只能猜你在问什么。
+插件的更新机制可以由业务在Manager中控制。更新的时机和业务是强相关的。Manager和插件进行通信，在合适的时机启动新插件就可以了。
+对于插件UUID更新的情况，由于配套的Loader和Activity-Container也需要更新，则需要重起PPS。
+那么最容易实现的策略可以是如果没有插件包，则等待下载，否则先启动本地已有的最新插件包，同时去下载更新的插件包。
+
+请问，目前是需要我们自己实现从后台下载插件包的功能是么？后面官方有计划补充上这个功能么？
+...
+对。现在开源的代码中Manager只实现了下载好插件包之后的事情，包括安装和升级之类的本地功能。
+版本检查和下载是需要业务方继承SDK的Manager然后实现的。
+这部分功能我们是有计划开源的，我们肯定是希望开源出来，让大家跟我们用同一套实现，这样才有可能公共维护。
+---
+
+---question & answer
+场景与需求：我们项目中有三个插件ABC，其中想单独升级插件C。
+Shadow实现：在宿主host中将manage先复制到build/generated/assets/...文件夹下，将build目录下plugin-debug.zip根据packagePlugin复制到assets文件夹下，然后通过PluginHelper类从assets文件夹下复制到pluginManagerFile和pluginZipFile这两个文件中，然后后续的插件加载都是通过这两个文件糅合到宿主host中进行加载的。
+问题： 目前插件中的实现，都是加载pluginZipFile这个文件加载插件的，没法做到单独升级插件C。
+我不确定我目前理解的是不是对的，请大佬解惑。
+...
+你理解的基本没问题。manager作为shadow的插件管理逻辑，它的主要设计是服务于我们做shadow时自己的业务的需要的。作为开源项目，我们尽可能把它设计的通用可扩展了，但是对于我们自己业务用不上的逻辑没法实现那么完整。
+在现有代码设计中，宿主、manager、插件，是3个不同的版本部分，可以更新其中1个的版本。对于插件这个部分来说，其中还包含loader、runtime、业务插件这些部分。这些东西是用一个UUID统一成一个版本的。在设计中，UUID相同的apk，才能协同工作。这个设计主要是因为我们需要这些UUID相同的插件经常通过类的白名单直接跨apk引用类型，所以需要简单管理它们，需要它们一同更新。
+ABC三个插件，如果只需要更新C插件，那么AB也要一起更新，对于用户来说要重复下载AB插件显然是不合适的。在预想的设计中，考虑未来这个场景应该通过增量下载来优化。即manager在下载新UUID的ABC插件时，可以根据md5等文件hash复用之前旧的UUID的AB插件，达到只下载新版本的C插件和少量新配置文件的目的。所以对于loader来说，新UUID的ABC 3个插件都是新的。
+启动新版本UUID的ABC 3个插件时，肯定要重启进程了。如果要保持AB插件的内存而更新插件C，还需要特别的设计。在改动不大的情况下，应该只能给C单独分配一个manager实现，让它和AB采用不同的UUID，相互通过AIDL通信。即同一个宿主接入多个不相关的Shadow实现。
+...
+首先感谢大佬的回复。
+是不是我将插件AB使用一套manager，插件C使用另一套单独的manager进行管理，我们项目中插件ABC相互不通讯，是不是可以单独升级插件C？
+...
+是的。一个宿主中可以接多个Shadow的实现。最好将这些插件分开到不同进程中，避免潜在的冲突。
+---
+
+---question & answer
+我这边想要做一个插件升级的功能。
+我的项目中，有多个插件。固定了uuid，保持他们一致。
+loader、runtime、manager这些我会预装在宿主assets中，
+当宿主启动时，会将这些push到app的私有目录中。
+插件工程最后打包的zip中，包含了config.json，及插件apk。
+按照sample中的逻辑，当一个插件包被加载过后，不会重新加载zip。这块我修改了源码，可以自主选择是否重新加载zip包。
+那么问题来了，插件的版本号控制，我能想到的是，宿主去维护一个版本号。
+安装了某个插件后，记录下当前版本号，发现版本号有更新，再去重新加载新下载的zip。
+请问shadow框架在此场景中，有没有记录插件版本号的字段及管理？
+config.json中，有一个version字段，但该字段并没有被解析到InstalledPlugin中，而且该字段表明的意思似乎并不是插件的版本号。
+我在查看源码的时候，发现UUID_NICKNAME字段有注释为插件版本号，可以依据此字段去做插件升级判断逻辑吗？
+...
+用UUID_NICKNAME记录你插件的自定义版本号就行了。在manager实现里用这个字段去判断是否更新插件就行。
+然后core.manager对于安装的插件管理逻辑是后安装的就是新版本的插件。
+每次安装的插件UUID还是要变化的。各个部分的UUID保持一致是为了标记它们是一个版本，能协同工作。
+https://github.com/Tencent/Shadow/blob/master/projects/sdk/core/manager/src/main/java/com/tencent/shadow/core/manager/installplugin/PluginConfig.java
+这个代码注释里有描述字段的用途。
+...
+我看shadow中有plugin、以及part的概念。
+我是不是可以认为，如果我这边所有的插件uuid固定是一样的，那么我每一个插件都是一个part？
+在shadow中，我所有的插件的集合会被认为是一个插件？
+...
+对。com.tencent.shadow.core.manager.installplugin.InstalledPlugin 这个类型定义了插件分成了几个Part，part也分了类型。
+...
+那么按照这种设计，其实我应该在每个part中去定义他的partVersion。
+但是这好像又和已有的数据库设计冲突。
+其实我的目的就是，每个插件可以单独升级，单独安装。
+但是uuid要求每个插件的uuid都是一致的。
+有什么办法能去除这种限制吗？
+...
+这个我前两天也回复过类似的问题：#583 (comment)
+核心问题还是多个插件apk之间可能有ClassLoader parent的依赖关系。如果确实没有类型依赖，单独升级应该是不会有问题的。但是我们既然有类的跨apk依赖能力，就要有UUID这种设计帮助保护它。
+我还是建议考虑从下载的层面复用之前UUID的apk，给它分配新的UUID。
+...
+我明白你的意思。
+但是有的业务场景是插件之间完全没有关联，完全独立。
+这种情况下，多个插件会被uuid限制住。
+有没有什么方式可以去掉这种限制？
+或者说，具体做限制的地方代码在哪处，这样我好修改为符合我这边应用场景的代码。
+我没有去掉uuid的限制，但是用另一种方式做了规避。
+虽然可能不符合shadow的设计理念，但符合我这边的业务场景。
+在此分享一下大概思路。
+在shadow的脚本中添加partVersion，用于记录每一个part的版本号信息。
+在manager中判断已加载的partVersion与zip中的partVersion差异，
+来决定是否重新加载zip包。
+
+
+---
+
+--- answer
+
+---
+
+--- question && answer
+Shadow框架我已经成功集成并且调用成功，但是我搞不懂插件要如何升级？
+issues中我也看了几个关于升级插件的，这边的需求没有这么复杂，只用到了一个插件，只要能做到插件升级即可
+我目前知道的在App当中需要加入manage.apk 以及 plugin.zip
+传统的升级思路：
+下载文件并更新原有的文件即可
+疑问：
+我更新插件时，manage和plugin两个文件都需要重新下载升级？
+我如何在主工程app当中获取plugin的版本号？用于对比本地插件是否需要升级
+由于在app当中读取manage.apk路径以及名称都是是写死的，当我下载到新的manage是直接替换掉原有的manage？
+还有就是是否有提供已经封装好的方法直接替换下载好的manage和plugin？
+...
+如果我的思路不正确，是否能帮忙调整？
+manager.apk这个是不要去弄成动态的，你把它和宿主工程放在同一个项目中，当它构建出来时，你把它自动拷贝到宿主的assets目录下，然后在运行宿主时把它放到某个目录中（app或者sd卡中）。
+只有插件apk的信息是动态的，这个需要动态下载，你在宿主调用时，通过bundle传动态的值。
+
+请问下，宿主app动态下载加载manage-project和插件plugin，目前shadow支持判断是否已经下载完manage和plugin包并且判断版本号，是否有新版本需要重新下载？还是说这些判断都是需要我这边自己去写代码做判断。感谢
+...
+插件升级逻辑需要你自己写。对于core-manager来说，后安装的插件就是最新版本的。
+可以用config.json中的UUID_NickName来标记业务版本号：
+也完全重写core-manager满足自己的需要，重写manager逻辑是不会涉及loader的。
+
+
+##### 插件uuid的设计问题
+
+---question&& answer
+基于现在的设计，是不是没办法动态的给插件分配进程。现在的系统好像是默认同一个Service里的所有插件uuid都是一样的。如果我有两个不同uuid的插件包，是不是没办法把他们加载到同一个Service里？
+...
+uuid是版本号。一组不同partkey的插件可以协同工作，就可以分配相同的uuid。插件启动在哪个进程，是由PPS和ContainerActivity决定的。这两件事不相关。manager的代码是动态的，就可以动态的决定从哪一个PPS 启动插件。
+...
+en, 我再说详细一点吧，我两个partkey不同，uuid也不同，然后在manager里面给他们分配同一个pps来加载。由于pps里面对之前加载pluginLoader时的uuid做了缓存，所以后面用partkey来加载插件时，第一个先加载的插件是可以的，但加载第二个插件时，由于pps里缓存了第一个插件的uuid，就直接使用第一个插件的uuid去处理了，造成第二个插件找不到。
+#929，之前有人提过这个问题，当时的回复确实是同一个进程只能启动相同uuid的插件，想问下这么设计的初衷是什么？如果改成同一个进程启动不同uuid的插件有没有什么问题？
+...
+uuid是版本号。关于版本控制都是些通用的设计，没什么特殊的。混合加载不同版本的组件会引起什么问题可以参考一些动态库兼容性方面的资料，都是差不多的。
+我们的理解可能有点偏差，应该不涉及到版本控制的问题。比如这里有两个插件，我们没办法控制他们uuid必须一样，他们有各自的版本，但理论上还是应该可以把他们分配到同一个进程。我看现在的设计里同一个进程中的插件uuid必须要统一，为什么不同的插件uuid要一致呢？
+...
+你没有提供具体的场景，也许你的插件非常简单，没有版本控制也能正常工作。比如一个插件是计算器，一个插件是相册，那它们就没什么关系嘛。版本不一致也不会显露出什么问题。但这种情况下你也可以把它们版本号设为相同的，也不影响什么。 你要还认为这跟版本控制没关系，就关了issue吧。这个uuid就是版本号。没啥好讨论的了。
+...
+你举的这个例子就可以啊，按照你的解释，计算器和相册的版本号每次都要设置一样，否则就没法在同一个进程。但实际开发中，计算器和相册的版本号不可能一直一样吧，比如计算器出问题了，我升级了一个版本，相册没动，那计算器新版本插件下发之后就不能和老版本的相册在同一进程工作了。不知道这个场景，你们怎么处理呢？
+---
+
+##### 多插件、多进程
+
+--- question && answer
+在测试官方demo时，官方提供了两个插件
+想提出以下几个问题
+1、不管是选择哪个插件都是加载的 sample-plugin-app 这个demo是还没完成么？
+2、宿主加载两个插件，就需要有两个插件的进程，每个插件是用同一个ppscontroller ？还是一个插件一个ppsController? 我之所以问这个问题就是因为我在加载多插件时会判断ppsController是否为空，为空才会绑定另外一个进程服务，很显然按照官方demo，加载了第一个插件后ppsController是不为空的，所以对于另外的插件不会启动单独的进程。对于下图中的代码，对于多插件的情况下能否满足要求么？
+3、多插件，多进程的情况下，需要让FastFastPluginManager继承自PluginManagerThatSupportMultiLoader 对么？PluginManagerThatSupportMultiLoader类中有些未实现的抽象方法需要研发人员自己实现么？比如getPluginKey() ?
+...
+从提交记录 a0ea9d5 上可以看出来这个app2只是为了验证multiprocess的用法。
+不同插件进程里的插件是不相关的，跨进程的代码相互之间没有影响。所以我们一般不会专门研究怎么支持插件多进程，就是manifest中的process属性。因为这个没有什么技术障碍，把插件组件分配到对应插件进程的PPS就行了。
+一个插件进程一个PPS。宿主在manager这边控制它就行了。fast manager只是个支持持有一个controller的启动流程演示代码。要管理多个PPS只需要持有多个控制器就好了。
+要是同一个插件进程需要多种Loader版本，才需要multiloader那套实现。具体可以看提交记录，搜issue。这种场景是多个业务被迫共用一个插件进程。多个业务的shadow版本不一样。
+谢谢回复！这个必须使用多个ppscontroller才行是吧，因为一个pps对应一个IBinder 对象，我看改造的话还挺麻烦的。能给具体写段代码或有多插件加载的demo 么？
+经过多次、多个插件进程代码的断点调试，多插件基本功能已经实现，一些小细节还需调整。下面贴出改造后的代码，如有错误还需指正：主要改的文件是FastPluginManager文件代码：修改后的代码如下
+
+---
+
