feat: 完善和补充 Shadow 框架的详细解析和使用指南

--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -4785,10 +4785,7 @@ Shadow 是腾讯开源的 Android 插件化框架.
 │   │   ├── business_plugin // 业务插件, 基于 business_lib, 仅包含业务代码和插件框架代码, 不能直接打包和运行的业务插件
 ```
 
-##### 新建项目
-
-1. 复制 sdk 内的源项目文件到新项目中. 目标示例: ../Projects/ShadowApplication/sdk/shadow
-
+##### 编译 sdk
 
 ##### 宿主(host)编写流程
 
@@ -4822,7 +4819,7 @@ Shadow 是腾讯开源的 Android 插件化框架.
 
     - 自定义和注册 `PluginLoadActivityXxx`, 用于承接插件加载逻辑.
     - 自定义和注册 `PluginProcessServiceXxx` 类型的插件进程服务, 用于管理插件加载过程, 每个插件进程都需要注册一个.
-    - 自定义和注册 `PluginXxxProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式.
+    - 自定义和注册 `PluginXxxProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式. 编写时注意因为没依赖 runtime 库标红没事, 宿主可以正常实现对应类加载
     - 自定义和注册 `MainProcessManagerReceiver` 接收器, 用于接收插件进程加载相关的的广播消息.
     - 注册 `PluginContainerContentProvider` 用于跨进程通信.
 
@@ -4919,8 +4916,6 @@ Shadow 是腾讯开源的 Android 插件化框架.
     > [!question]
     > 
     > 为什么不在这里传递 `KEY_PLUGIN_ZIP_PATH`, 而是在 `PluginLoadActivityXxx` 直接写死的插件 zip 包路径, 不推荐使用多个插件 zip 包吗?
-    > 
-    > 
 
 6. 插件加载的入口 `PluginLoadActivityXxx` 实现
 
@@ -5110,7 +5105,7 @@ Shadow 是腾讯开源的 Android 插件化框架.
 
 3. 自定义插件加载器实现类(一般分两部分实现, `XxxPluginLoader` 只负责实际的业务插件的加载过程，包括资源、类加载等核心功能, `XxxComponentManager` 负责管理插件中的四大组件和壳子容器组件的映射关系)
 
-业务插件加载器 `XxxPluginLoader` 扩展自 `ShadowPluginLoader`, 其业务行为主要由 `getComponentManager` 和 `getDelegateProviderKey` 方法控制, 因此一般情况下只需要实现两个方法, 返回一个自定义的 `XxxComponentManager` 实例和专用与此加载器的唯一 KEY 即可. 如果需要自定义插件加载器的其他行为, 如插件加载回调, 插件加载失败处理等, 可以重写 `loadPlugin` 方法.
+业务插件加载器 `XxxPluginLoader` 扩展自 `ShadowPluginLoader`, 其业务行为主要由 `getComponentManager` 和 `getDelegateProviderKey` 方法控制, 因此一般情况下只需要实现两个方法, 返回一个自定义的 `XxxComponentManager` 实例和专用与此加载器的唯一 KEY 即可. 如果需要自定义插件加载器的其他行为, 如插件加载回调, 插件加载失败处理等, 可以重写 `loadPlugin` 方法. `getDelegateProviderKey` 返回的值一定要注意与代理类, 如 `PluginDefaultProxyActivity` 等的对应关系. 不然会导致插件加载时找不到对应类.
 
 业务插件组件管理类 `XxxComponentManager` 负责管理插件中的四大组件和宿主中注册的壳子容器组件的映射关系, 其业务行为主要由 `onBindContainerActivity` 方法 和 `onBindContainerContentProvider` 方法控制. 
 - `onBindContainerActivity` 方法用于将插件中的 Activity 组件与宿主中注册的壳子容器组件进行绑定, 并返回一个 `ComponentName` 实例, 绑定关系是通过类名实现.
@@ -5156,8 +5151,10 @@ Shadow 是腾讯开源的 Android 插件化框架.
 
 业务插件应用是一个 application 模块, 主要用于打包当前业务插件所需的所有业务逻辑代码和资源, 并生成一个可安装的 APK 文件. 业务插件应用通常依赖于对应的业务插件库, 并在其基础上添加一些额外的配置和逻辑, 便于 Shadow 插件框架进行自动化处理.
 
-> [!warning]
+> [!tip]
 > 如果有多个业务插件, 某些配置只需要在一个业务插件应用中配置即可, 其他业务插件应用可以不配置, 对应的特殊配置在下面会提到.
+> 如果插件依赖 AppCompatActivity 进行业务开发, 需要在插件内进行主题资源适配, 而不是宿主中
+> runtime 依赖类型必须 compileOnly, 不然会导致 transform 时遇到壳子组件发生循环依赖
 
 1. 依赖配置
 
@@ -5258,6 +5255,8 @@ Shadow 是腾讯开源的 Android 插件化框架.
 2. 执行宿主的打包任务, 示例位置: Android Studio -> Gradle -> :sample-host -> Tasks -> build -> assembleDebug. 执行即可. 或是右上角常用的 app 构建图标也行, 选择宿主项目即可.
 
 #### 高级用法
+
+##### 如何适配 jdk17 和高版本 gradle
 
 ##### 如何在插件中使用宿主的资源
 
