feat: 增加关于业务插件和 PluginXxxProxyActivity 的使用提示

--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -4785,6 +4785,9 @@ Shadow 是腾讯开源的 Android 插件化框架.
 │   │   ├── business_plugin // 业务插件, 基于 business_lib, 仅包含业务代码和插件框架代码, 不能直接打包和运行的业务插件
 ```
 
+> [!tip]
+> 目前来看, 业务插件和业务 app 的打包逻辑可以合并为一个, 插件相关的依赖使用 pluginImplementation, pluginCompileOnly 就可以了.
+
 ##### 编译 sdk
 
 ##### 宿主(host)编写流程
@@ -4819,7 +4822,7 @@ Shadow 是腾讯开源的 Android 插件化框架.
 
     - 自定义和注册 `PluginLoadActivityXxx`, 用于承接插件加载逻辑.
     - 自定义和注册 `PluginProcessServiceXxx` 类型的插件进程服务, 用于管理插件加载过程, 每个插件进程都需要注册一个.
-    - 自定义和注册 `PluginXxxProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式. 编写时注意因为没依赖 runtime 库标红没事, 宿主可以正常实现对应类加载
+    - 自定义和注册 `PluginXxxProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式. 
     - 自定义和注册 `MainProcessManagerReceiver` 接收器, 用于接收插件进程加载相关的的广播消息.
     - 注册 `PluginContainerContentProvider` 用于跨进程通信.
 
@@ -4854,6 +4857,9 @@ Shadow 是腾讯开源的 Android 插件化框架.
         </intent-filter>
     </receiver>
     ```
+
+> [!tip]
+> PluginXxxProxyActivity 是页面的壳子组件, 实现放在了 runtime 插件中. 编写时因为没依赖 runtime 库标红是正常的, 宿主可以正常在运行时实现对应类加载.
 
 3. `Application` 实现
 
